--- a/Interdisciplinary/Interdisciplinary/Interdisciplinary.csproj
+++ b/Interdisciplinary/Interdisciplinary/Interdisciplinary.csproj
@@ -34,4 +34,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\css\styles.css">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>styles.scss</DependentUpon>
+    </Content>
+  </ItemGroup>
+
 </Project>
