--- a/Interdisciplinary/Interdisciplinary/Interdisciplinary.csproj
+++ b/Interdisciplinary/Interdisciplinary/Interdisciplinary.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\uploaded-images\" />
   </ItemGroup>
 
   <ItemGroup>
